spacing and layout fixes

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1643,7 +1643,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 }
 
 .mb-24 {
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 .ant-table-thead > tr > th {
